--- a/Exercise_201/nbproject/project.properties
+++ b/Exercise_201/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Exercise_201
-main.class=
+main.class=VelocityGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
